# python-django-api

./: Makefile  README.md  dev.env  pyproject.toml
.github/workflows/: sonarqube-scanner.yaml
app/: settings.py
docker/: Dockerfile
