[tool.poetry]
name = "Nuwe: Python & django skeleton"
version = "1.0.0"
description = ""
authors = ["nuwe-team <hello@nuwe.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

